Refactored frontend to fix layout issues

--- a/src/OE.Tudasbazis/OE.Tudasbazis.Web/OE.Tudasbazis.Web.Client/Pages/Home.razor.css
+++ b/src/OE.Tudasbazis/OE.Tudasbazis.Web/OE.Tudasbazis.Web.Client/Pages/Home.razor.css
@@ -1,75 +1,13 @@
-/*.page-container {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-	height: 100vh;
-	padding: 2rem;
-	color: white;
-}
-
-/* Styles for the text output (top) */
-.text-output {
-	flex-grow: 0;
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	text-align: center;
-	width: 100%;
-	color:white;
-}
-
-/* Styles for the text input (bottom) */
-.text-input {
-	flex-grow: 0;
-	display: flex;
-	justify-content: center;
-	align-items: flex-end;
-	width: 100%;
-}
-
-.text-input-box {
-	background-color: #222;
-	border: 2px solid green;
-	color: white;
-}
-
-	/* Style for the input field */
-	.text-input input {
-		width: 300px;
-		padding: 0.5rem;
-		font-size: 1rem;
-		border-radius: 5px;
-		border: 1px solid black;
-
-	}
-
-.image-overlay {
-	position: absolute;
-	top: 45%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 10;
-}
-
-	.image-overlay img {
-		width: 1000px;
-		height: auto;
-		opacity: 0.7;
-	}
-*/
-
 .home-container {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	/*height: 90vh;*/
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-	padding: 2rem;
-	/*background-color: #313131;*/
+	padding: 10px;
+	padding-top: 20px;
 	color: white;
 	row-gap: 20px;
 }
@@ -77,66 +15,55 @@
 .input-container {
 	display: flex;
 	flex-wrap: nowrap;
-	justify-content: space-around;
-	/*flex-direction: row;*/
+	justify-content: center;
 	align-items: center;
-	/*justify-content: center;*/
-	/*gap: 10px;*/
+	gap: 15px;
 	width: 100%;
 }
 
 .user-input-container {
-	/*flex-grow: 0;*/
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/*align-items: flex-end;*/
-	width: 75%;
+	width: 90%;
 }
 
 .user-input {
 	background-color: #222;
-	border: 2px solid green;
+	border: 2px solid black;
 	color: white;
-	background-color: #4d4d4dd2;
-	/*width: 500px;*/
-	/*width: 70%;*/
+	background-color: #222222;
+	overflow-y: hidden;
+	resize: none;
 }
 
-.user-input-container input {
+.user-input-container textarea {
 	padding: 0.5rem;
 	font-size: 1rem;
 	border-radius: 5px;
 	border: 1px solid black;
-	width: 100%
+	width: 100%;
 }
 
 .search-button {
-	/*background-color: #bebebe;*/ /* Gomb háttérszíne */
-	/*border: none;*/ /* Nincs keret */
-	/*padding: 10px 20px;*/ /* Gomb belső margója */
-	/*font-size: 16px;*/ /* Betűméret */
 	cursor: pointer;
 	border-radius: 75%;
 	border-color: #000000;
-	/*display: flex;
-	justify-content: center;*/ /* Középre igazított tartalom */
-	/*align-items: center;*/ /* Függőleges középre igazítás */
 	width: 45px;
 	height: 45px;
-	/*transition: background-color 0.3s;*/ /* Animáció a háttérszín változásra */
 }
 
 	.search-button:hover {
-		background-color: #4d4d4dd2;
+		background-color: #222222;
 		color: white;
 		border-color: white;
 	}
 
 .response-box {
 	padding: 1rem;
-	background-color: #4d4d4dd2;
-	border: 2px solid black; /* Zöld keret sikerhez */
+	padding-bottom: 0px;
+	background-color: #222222;
+	border: 2px solid black;
 	border-radius: 8px;
 	color: white;
 	margin: 1rem 0;
