--- a/src/OE.Tudasbazis/OE.Tudasbazis.Web/OE.Tudasbazis.Web.Client/wwwroot/app.css
+++ b/src/OE.Tudasbazis/OE.Tudasbazis.Web/OE.Tudasbazis.Web.Client/wwwroot/app.css
@@ -1,7 +1,7 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	height: 100%;
-	background-color: #212121 !important;
+	background-color: #333333 !important;
 }
 
 a, .btn-link {
@@ -19,8 +19,8 @@ a, .btn-link {
 }
 
 .content {
-    /*padding-top: 1.1rem;*/
-	/*padding-left: -10px !important;*/
+    padding-top: 1.1rem;
+	padding-left: -10px !important;
 }
 
 h1:focus {
